# dbveil

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: veil.example.yaml
tests/: test_config.py  test_guard.py  test_init.py  test_instances.py  test_onepassword.py  test_op_readiness.py  test_redact.py  test_resolvers.py
veil/: __init__.py  audit.py  cli.py  config.py  engine.py  executor.py  guard.py  log.py  mcp_server.py  onepassword.py  pipeline.py  prompts.py  resolvers.py  result.py  serialize.py  tui.py
veil/redact/: __init__.py  column_rules.py  llm.py  ner.py  patterns.py
