[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbveil"
version = "0.2.0"
description = "A local read-only, PII-redacting proxy that lets AI agents query your database safely."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Mathusan Selvarajah" }]
keywords = ["database", "postgres", "mcp", "pii", "redaction", "ai", "read-only", "proxy", "claude"]
dependencies = [
    "asyncpg>=0.29",
    "pglast>=6.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "mcp>=1.2",
    "inquirerpy>=0.3",
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
ner = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
llm = ["httpx>=0.27"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
veil = "veil.cli:app"
dbveil = "veil.cli:app"

[project.urls]
Homepage = "https://github.com/mathu97/dbveil"
Repository = "https://github.com/mathu97/dbveil"

[tool.hatch.build.targets.wheel]
packages = ["veil"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
